# tuto_qt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: CustomButton.h  main_window.h
headers/Conteneurs/: tuto_qscrollArea.h  tuto_qsplitter.h  tuto_qstackedWidget.h  tuto_qtabWidget.h
headers/Qwidgets/: tuto_qcheckBox.h  tuto_qcomboBox.h  tuto_qlabel.h  tuto_qlineEdit.h  tuto_qprogressBar.h  tuto_qpushButton.h  tuto_qslider.h  tuto_qspinBox.h
headers/mini-projets/: code_editor.h  sidebar_app.h  tabWidget_app.h
headers/mini-projets/audio-system/: audio_engine.h  audio_engine_app.h  player_ui.h  worker_simulator.h
headers/mini-projets/aurora-skeleton/: aurora_skeleton.h
headers/mini-projets/aurora-skeleton/components/: main_content.h  playerbar.h  sidebar.h  topbar.h
headers/mini-projets/aurora-skeleton/pages/: home_page.h  library_page.h  settings_page.h  star_page.h
headers/mini-projets/code_editor/: code_editor.h  panneau.h
headers/mini-projets/file-explorer/: file_explorer.h
headers/mini-projets/form-dock/: form_dock_app.h
headers/mini-projets/menu-explorer/: menu_explorer.h
headers/mini-projets/musical_card/: musical_card.h  musical_card_app.h
resources/: resources.qrc
resources/style/: button.qss
src/: CustomButton.cpp  main_window.cpp
src/Conteneurs/: tuto_qstackedWidget.cpp  tuto_qtabWidget.cpp
src/Qwidgets/: tuto_qcheckBox.cpp  tuto_qlineEdit.cpp  tuto_qprogressBar.cpp
src/conteneurs/: tuto_qscrollArea.cpp  tuto_qsplitter.cpp  tuto_qstackedWidget.cpp
src/mini-projets/: code_editor.cpp  panneau.cpp  sidebar_app.cpp  tabWidget_app.cpp
src/mini-projets/audio-engine/: audio_engine.cpp  audio_engine_app.cpp  player_ui.cpp  worker_simulator.cpp
src/mini-projets/audio-syste,/: audio_engine.cpp  audio_engine_app.cpp  player_ui.cpp
src/mini-projets/aurora-skeleton/: aurora_skeleton.cpp
src/mini-projets/aurora-skeleton/components/: main_content.cpp  playerbar.cpp  sidebar.cpp  topbar.cpp
src/mini-projets/aurora-skeleton/pages/: home_page.cpp  library_page.cpp  settings_page.cpp  star_page.cpp
src/mini-projets/code_editor/: code_editor.cpp  panneau.cpp
src/mini-projets/file-explorer/: file_explorer.cpp
src/mini-projets/form-dock/: form_dock_app.cpp
src/mini-projets/menu-explorer/: menu_explorer.cpp
src/mini-projets/musical_card/: musical_card.cpp  musical_card_app.cpp
src/qwidgets/: tuto_qcomboBox.cpp  tuto_qlabel.cpp  tuto_qpushButton.cpp  tuto_qslider.cpp  tuto_qspinBox.cpp
